# ABACUS-orbitals

./: .gitignore  README.md  SIAB_INPUT  SIAB_INPUT.json  SIAB_INPUT_new  SIAB_INPUT_old  log  nao2gto.py  pyproject.toml  setup.py  test.py
.github/: issue_label_bot.yaml
14_Si_100Ry/: INPUT  INPUTs  INPUTw  Si-STRU1-6-1.8.stru  Si-STRU1-6-2.0.stru  Si-STRU1-6-2.3.stru  Si-STRU1-6-2.8.stru  Si-STRU1-6-3.8.stru  Si-STRU2-6-1.9.stru  Si-STRU2-6-2.1.stru  Si-STRU2-6-2.6.stru  time.json
Dojo-NC-FR/: DeltaDFT_PW-LCAO_DZP_E100.txt  DeltaDFT_PW-LCAO_TZDP_E100.txt  Orbitals_v2.0_TZDP_E100_StandardRcut.json
Dojo-NC-SR/: DeltaDFT_PW-LCAO_DZP_E100.txt  DeltaDFT_PW-LCAO_TZDP_E100.txt  Orbitals_TZDP_E100_StandardRcut.json
Dojo-NC-SR_La-Series/: DeltaDFT_PW-LCAO_DZP_E100.txt  DeltaDFT_PW-LCAO_TZDP_E100.txt
SG15_v1.0/: DeltaDFT_PW-LCAO_DZP_E100.txt  DeltaDFT_PW-LCAO_TZDP_E100.txt  Orbitals_v2.0_DZP_E100_StandardRcut.json  Orbitals_v2.0_TZDP_E100_StandardRcut.json
SIAB/: Orbgenv3p0.py  README.md  SIAB.py  SIAB_nouvelle.py  _SIAB.py  __init__.py  abacus.py  database.py  orbgen.py  read_input.py  to_bc.py
Si-dimer-1.62/: INPUT  STRU-Si-dimer-1.62  time.json
Si-dimer-1.8/: INPUT  STRU-Si-dimer-1.8  time.json
Si-dimer-1.82/: INPUT  STRU-Si-dimer-1.82  time.json
Si-dimer-2.0/: INPUT  STRU-Si-dimer-2.0  time.json
Si-dimer-2.22/: INPUT  STRU-Si-dimer-2.22  time.json
Si-dimer-2.3/: INPUT  STRU-Si-dimer-2.3  time.json
Si-dimer-2.72/: INPUT  STRU-Si-dimer-2.72  time.json
Si-dimer-2.8/: INPUT  STRU-Si-dimer-2.8  time.json
Si-dimer-3.22/: INPUT  STRU-Si-dimer-3.22  (+1 more)
(+6357 files in other folders)
