[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SIAB"
version = "2.1-alpha"
description = ""
readme = "README.md"
authors = [
    { name = "ABACUS-AISI developers", email = "huangyk@aisi.ac.cn" }
]
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "torch_optimizer",
    "torch_complex",
    "addict"
]

[project.scripts]
SIAB_nouvelle = "SIAB.SIAB_nouvelle:main"